Fehler in den Tests behoben