@@ -34,6 +34,6 @@ public class StringUtils {
 	 * @return true oder false
 	 */
 	public static boolean isEmpty(String s) {
-		return s == null || s.trim().isEmpty();
+		return s == null || s.isBlank();
 	}
 }
